--- a/modules/retail/pages/retail-network-arch.adoc
+++ b/modules/retail/pages/retail-network-arch.adoc
@@ -39,7 +39,7 @@ image::retail_dedicated_nic.png[scaledwidth=80%]
 
 === Shared Network Architecture
 
-The branch server shares a network with the terminals, and provides a connection to the {susemgr} server.
+The branch server and the terminals are connected to the same network as the {susemgr} server.
 In this configuration, the branch server is not required to manage a network (DHCP and DNS services), but acts as a PXE boot server and provides FTP and TFTP services.
 
 image::retail_shared_network.png[scaledwidth=80%]
