Edits to sleses

--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -187,9 +187,10 @@ Synchronization can sometimes take several hours.
 ====
 
 
-== Register Clients
 
-When you have set up all the custom channels, you can add the client tools, and register clients.
+== Add Client Tools
+
+When you have set up all the custom channels, you can add the client tools.
 
 For this section, you will require an activation key.
 For more information about activation keys, see xref:client-configuration:clients-and-activation-keys.adoc[].
@@ -239,7 +240,7 @@ For example, [systemitem]``https://download.opensuse.org/repositories/systemsman
 * Leave all other fields as the default values.
 . Click btn:[Create Repository]
 . Navigate to menu:Software[Manage > Channels].
-. Click btn:[Create Channel] and set these parameters:
+. Click btn:[Create Channel] and set these parameters.
 Ensure you use the correct {rhela} version:
 * In the [guimenu]``Channel Name`` field, type [systemitem]``Uyuni Client Tools for CentOS 7 (x86_64)``.
 * In the [guimenu]``Channel Label`` field, type [systemitem]``centos7-uyuni-client-x86_64``.
